cloudtask-microservices/kubernetes/20-task-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: cloudtask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: adjaino/cloudtask:task-service-1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 75m
              memory: 96Mi
            limits:
              cpu: 400m
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /health
              port: 4000
            periodSeconds: 5
            failureThreshold: 40
          readinessProbe:
            httpGet:
              path: /ready
              port: 4000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: cloudtask
spec:
  type: ClusterIP
  selector:
    app: task-service
  ports:
    - name: http
      port: 4000
      targetPort: 4000
