cloudtask-microservices/kubernetes/60-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-only-from-task-service
  namespace: cloudtask
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: task-service
      ports:
        - protocol: TCP
          port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: task-service-ingress
  namespace: cloudtask
spec:
  podSelector:
    matchLabels:
      app: task-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-service
        - podSelector:
            matchLabels:
              app: analytics-service
      ports:
        - protocol: TCP
          port: 4000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: analytics-service-ingress
  namespace: cloudtask
spec:
  podSelector:
    matchLabels:
      app: analytics-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-service
      ports:
        - protocol: TCP
          port: 5000
